# melee

./: .clang-format  .clangd  .dockerignore  .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  .vimrc  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Doxyfile  GETTING_STARTED.md  LICENSE  Makefile  PR_SPLIT_PLAN.md  README.example.md  README.md  asmdiff.sh  build.sh  calcprogress.py  compile_flags.txt  configure.py  default.nix  diff.py  diff_settings.py  e_files.mk  gen.sh  ldscript.lcf  m2c.py  m2ctx.py  main.py  match_results.txt  obj_files.mk  orig  requirements.in  requirements.txt  (+6 more)
tools/config-dtk/: Cargo.toml
tools/config-dtk/src/: cw_map.rs  dtk_config.rs  main.rs  types.rs
tools/dadosod/: .gitignore  Cargo.toml
tools/dadosod/src/: doldisasm.rs  lib.rs  main.rs  symbol.rs  tracker.rs  utils.rs
tools/diff-symbols/: Cargo.toml
tools/diff-symbols/src/: main.rs
tools/fix-labels/: Cargo.toml
tools/fix-labels/src/: main.rs
tools/issues/: Cargo.toml
tools/issues/src/: main.rs
tools/m2c/: .gitignore  README.md  m2c_macros.h  mypy.ini  pyproject.toml  run_tests.py  website.py
tools/m2c/.github/workflows/: python-app.yml
tools/m2c/m2c/: arch_mips.py  arch_ppc.py  asm_file.py  asm_instruction.py  c_types.py  demangle_codewarrior.py  evaluate.py  flow_graph.py  if_statements.py  instruction.py  ir_pattern.py  main.py  options.py  translate.py  types.py
tools/m2c/src/: arch_mips.py  arch_ppc.py  asm_instruction.py  asm_pattern.py  c_types.py  demangle_codewarrior.py  error.py  evaluate.py  flow_graph.py  if_statements.py  instruction.py  main.py  options.py  translate.py  types.py
tools/m2c/stubs/capstone/: __init__.pyi
tools/m2c/stubs/pycparser/: __init__.py  __init__.pyi  c_ast.pyi  c_generator.py  c_generator.pyi  c_parser.py  c_parser.pyi  plyparser.pyi
tools/m2c/tests/: add_test.py  elf_file.py  ppc_disasm.py
tools/m2c/tests/end_to_end/abi-float-regs/: irix-g-out.c  irix-g.s  irix-o2-out.c  irix-o2.s  orig.c
tools/m2c/tests/end_to_end/abs-sqrt/: irix-o2-out.c  irix-o2.s  mwcc-o4p-out.c  mwcc-o4p.s  orig.c
tools/m2c/tests/end_to_end/andor_assignment/: irix-g-out.c  irix-o2-noandor-flags.txt  irix-o2-noandor-out.c  irix-o2-out.c  irix-o2.s  mwcc-o4p-out.c  mwcc-o4p.s  orig.c
tools/m2c/tests/end_to_end/andor_assignment2/: irix-g-out.c  irix-g.s  irix-o2-out.c  irix-o2.s  mwcc-o4p-out.c  mwcc-o4p.s  orig.c
tools/m2c/tests/end_to_end/andor_loops/: irix-g.s  irix-o2-out.c  irix-o2.s  mwcc-o4p.s  orig.c
tools/m2c/tests/end_to_end/andor_mixed/: irix-g-out.c  irix-g.s  irix-o2-out.c  irix-o2.s  mwcc-o4p-out.c  mwcc-o4p.s  orig.c
tools/m2c/tests/end_to_end/andor_return/: mwcc-o4p-out.c  orig.c
tools/m2c/tests/end_to_end/arguments/: irix-g.s  mwcc-o4p-out.c  orig.c
tools/m2c/tests/end_to_end/array-access/: mwcc-o4p-flags.txt  mwcc-o4p-out.c
tools/m2c/tests/end_to_end/arrays/: irix-g-out.c  irix-g.s  irix-o2-out.c  irix-o2.s  mwcc-o4p-out.c  mwcc-o4p.s  orig.c
tools/m2c/tests/end_to_end/asm-arith/: test-flags.txt  test-out.c  test.s
tools/m2c/tests/end_to_end/big-stack/: irix-g-out.c  irix-o2-out.c  irix-o2.s  orig.c
tools/m2c/tests/end_to_end/branch-likely-b/: manual-out.c  manual.s
tools/m2c/tests/end_to_end/branch-likely-one-instruction/: manual.s
tools/m2c/tests/end_to_end/break/: mwcc-o4p-out.c
tools/m2c/tests/end_to_end/comparison/: mwcc-o4p-out.c  mwcc-o4p.s
tools/m2c/tests/end_to_end/complicated_context/: irix-g-out.c  irix-g.s  irix-o2-typemap-flags.txt  irix-o2-typemap-out.c  irix-o2.s  orig.c
tools/m2c/tests/end_to_end/conditional-moves/: manual-out.c  manual.s
tools/m2c/tests/end_to_end/cpp_vtables/: mwcc-o4p-out.c  orig.cpp
tools/m2c/tests/end_to_end/custom-return/: irix-g-out.c  irix-g.s  irix-o2-out.c  irix-o2.s  mwcc-o4p-out.c  mwcc-o4p.s  orig.c
tools/m2c/tests/end_to_end/custom_stack/: irix-g-flags.txt  irix-g-out.c  irix-g.s  irix-o2-flags.txt  irix-o2.s  orig.c
tools/m2c/tests/end_to_end/delay-slot-branch/: manual-out.c  manual.s
tools/m2c/tests/end_to_end/division/: irix-g.s  irix-o2-out.c  irix-o2.s  orig.c
tools/m2c/tests/end_to_end/division-by-power-of-two/: ido53-o2.s  ido71-o2.s  mwcc-o4p.s  orig.c
tools/m2c/tests/end_to_end/doubles/: irix-g-mips1-out.c  irix-g-mips1.s  irix-g-out.c  irix-o2-mips1-out.c  irix-o2-mips1.s  irix-o2-out.c  irix-o2.s  mwcc-o4p.s
tools/m2c/tests/end_to_end/duplicated-early-returns/: manual-out.c
tools/m2c/tests/end_to_end/empty-if/: manual.s
tools/m2c/tests/end_to_end/enums/: irix-g-flags.txt  irix-g-out.c  irix-g.s  irix-o2.s  mwcc-o4p-flags.txt  mwcc-o4p-out.c  orig.c
tools/m2c/tests/end_to_end/float-branch-evalonce/: irix-o2.s  mwcc-o4p-out.c  mwcc-o4p.s  orig.c
tools/m2c/tests/end_to_end/float-conversions/: irix-g-out.c  irix-g.s  irix-o2-out.c  irix-o2.s  mwcc-o4p.s  orig.c
tools/m2c/tests/end_to_end/float-fn/: irix-g.s  irix-o2-out.c  irix-o2.s  mwcc-o4p-out.c  orig.c
tools/m2c/tests/end_to_end/fn-write-reordering/: irix-g-out.c  irix-g.s  irix-o2-out.c  mwcc-o4p-out.c  mwcc-o4p.s  orig.c
tools/m2c/tests/end_to_end/function-pointer/: irix-g-out.c  irix-g.s  irix-o2-out.c  irix-o2.s  mwcc-o4p.s
tools/m2c/tests/end_to_end/function-pointer2/: irix-o2-out.c  irix-o2.s  mwcc-o4p.s  orig.c
tools/m2c/tests/end_to_end/gcc-division/: gcc-o2-flags.txt  gcc-o2-out.c  gcc-o2.s  irix-g-out.c  irix-g.s  irix-o2-flags.txt  irix-o2-out.c  irix-o2.s  mwcc-o4p-flags.txt  mwcc-o4p-out.c  mwcc-o4p.s  mwcc27-o4p-out.c  mwcc27-o4p.s  orig.c
tools/m2c/tests/end_to_end/gcc-division-by-two/: s16-out.c  s32.s
tools/replace-module/: Cargo.toml
tools/replace-module/src/: main.rs
tools/replace-symbols/: Cargo.toml
tools/replace-symbols/src/: main.rs
tools/rust-utils/: Cargo.toml
tools/rust-utils/src/: lib.rs  mw_map.rs  utils.rs
tools/rust-utils/src/mw_map/: mod.rs  parser.rs  regex.rs  types.rs
tools/scratch-tracker/: .gitignore  Cargo.toml
tools/scratch-tracker/src/: address.rs  decompme_api.rs  dtk_config.rs  main.rs  parse.rs  scratch.rs  scratch_config.rs
(+5423 files in other folders)
