[package]
name = "dadosod"
description = "Facilitate the process of creating a decompilation project for a given Wii/Gamecube game"
authors = ["Wesley Moret <wesmoret98@gmail.com>"]
version = "1.0.1"
license = "GPL-3.0-or-later"
keywords = ["wii", "gamecube", "decompilation", "disassembly"]
edition = "2021"

[dependencies]
ppc750cl = { git = "https://github.com/encounter/ppc750cl", rev = "aa631a33de7882c679afca89350898b87cb3ba3f" }
dol = { git = 'https://github.com/terorie/ppc750cl', package = 'dol' }
serde = "1.0"
csv = "1.1.6"
argh = "0.1"
