[package]
name = "melee-diff-symbols"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.3"
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive"] }
cwparse = { git = "https://github.com/ribbanya/cwparse", branch = "main" }
dashmap = { version = "5.4.0", features = ["rayon"] }
melee-utils = { version = "0.1.0", path = "../rust-utils" }
memmap2 = "0.5.10"
rayon = "1.7.0"
