[package]
name = "melee-fix-labels"
version = "0.1.0"
edition = "2021"
authors = ["Robin Avery <robin@ribbanya.dev>"]
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = "4.1.11"
env_logger = "0.10.0"
goblin = "0.6.1"
log = "0.4.17"
melee-utils = { version = "0.1.0", path = "../rust-utils" }
regex = "1.7.2"
