[tool.poetry]
name = "m2c"
version = "0.1.0"
description = "MIPS and PowerPC decompiler"
authors = [
    "Matt Kempster <kidpixel@gmail.com>",
    "Simon Lindholm <simon.lindholm10@gmail.com>",
    "Zach Banks <zjbanks@gmail.com>",
    "Ethan Roseman <ethteck@gmail.com>"
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/matt-kempster/m2c"
packages = [{include = "m2c"}]

[tool.poetry.dependencies]
python = "^3.8"
pycparser = "^2.21"
graphviz = "^0.20.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
mypy = "^1.8.0"
coverage = "^7.2.7"
black = "23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
