[package]
name = "melee-scratch-tracker"
version = "0.1.0"
edition = "2021"
authors = ["Robin Avery <robin@ribbanya.dev>"]
license = "AGPL-3.0-or-later"

[dependencies]
ahash = "0.8.7"
anyhow = "1.0.79"
backoff = "0.4.0"
clap = { version = "4.4.4", features = [ "derive" ] }
dashmap = { version = "5.5.3", features = ["rayon"] }
env_logger = "0.11.1"
lazy_static = "1.4.0"
log = "0.4.20"
melee-utils = { path = "../rust-utils" }
nom = "7.1.3"
petgraph = "0.6.4"
rayon = "1.8.1"
reqwest = { version = "0.11.24", features = ["blocking", "gzip", "brotli"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
time = { version = "0.3.32", features = ["serde-well-known"] }
url = { version = "2.4.1", features = ["serde"] }
